--- a/PyPoll/pypoll.ipynb
+++ b/PyPoll/pypoll.ipynb
@@ -47,20 +47,20 @@
     "    for row in csv_reader:\n",
     "        \n",
     "        total_votes +=1\n",
-    "        candidate_name = row[2]  # whu is this not on top?\n",
+    "        candidate_name = row[2]  \n",
     "        if candidate_name not in candidate_names:\n",
     "            candidate_names.append(candidate_name)\n",
     "            candidate_votes[candidate_name]=1 \n",
     "        else:\n",
     "            \n",
-    "            candidate_votes[candidate_name] +=1 #why\n",
+    "            candidate_votes[candidate_name] +=1 \n",
     "print (\"Election Results\")\n",
     "print(\"-----------------------------\")\n",
     "print(f\"Total Votes: {total_votes}\")\n",
     "print(\"-----------------------------\")   \n",
     "  \n",
     "for candidate_name in candidate_names:\n",
-    "    votes= candidate_votes[candidate_name] #why?\n",
+    "    votes= candidate_votes[candidate_name] \n",
     "    vote_percentage= (votes/total_votes)*100\n",
     "    formatted_percentage = \"{:.3f}\".format(vote_percentage)  # Format to three decimal places\n",
     "    print(f\"{candidate_name}: {formatted_percentage}% ({votes})\")\n",
